--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -1,8 +1,8 @@
 <div>
 <ul>
-  <li ng-reapeat="item in found">
+  <li ng-reapeat="item in list.found">
     {{item.short_name}},{{item.name}},{{item.description}}
-    <button class="btn btn-primary" ng-click="onRemove({index: $index});">Don't want this one!</button>
+    <button class="btn btn-primary" ng-click="list.onRemove({index: $index});">Don't want this one!</button>
 
   </li>
 </ul>
