--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -2,7 +2,7 @@
 <ul>
   <li ng-reapeat="item in list.found">
     {{item.short_name}},{{item.name}},{{item.description}}
-    <button class="btn btn-primary" ng-click="list.onRemove({index: $index});">Don't want this one!</button>
+    <button class="btn btn-primary">Don't want this one!</button>
 
   </li>
 </ul>
