--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -1,6 +1,6 @@
 <div>
 <ul>
-  <li ng-repeat="item in $scope.foundItems">
+  <li ng-repeat="item in list.foundItems">
     {{item.short_name}},{{item.name}},{{item.description}}
     <button class="btn btn-primary">Don't want this one!</button>
 
