--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -1,8 +1,8 @@
-<div>
+<div class="container">
 <ul>
   <li ng-repeat="item in list.foundItems">
     {{item.short_name}},{{item.name}},{{item.description}}
-    <button class="btn btn-primary" ng-click="list.onRemove({index: $index})">Don't want this one!</button>
+    <button class="btn btn-danger" ng-click="list.onRemove({index: $index})">Don't want this one!</button>
 
   </li>
 </ul>
