--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -1,9 +1,9 @@
 <div class="container">
-<ul>
+<span nf-if="list.foundItems.length === 0">Nothing found!</span>
+<ul nf-if="list.foundItems.length > 0">
   <li ng-repeat="item in list.foundItems">
     {{item.short_name}},{{item.name}},{{item.description}}
     <button class="btn btn-danger" ng-click="list.onRemove({index: $index})">Don't want this one!</button>
-
   </li>
 </ul>
 
