--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -1,6 +1,6 @@
-<div class="container">
-<span nf-if="list.foundItems.length === 0">Nothing found!</span>
-<ul nf-if="list.foundItems.length > 0">
+<div class="container grid">
+<span ng-if="list.foundItems.length === 0">Nothing found!</span>
+<ul ng-if="list.foundItems.length > 0">
   <li ng-repeat="item in list.foundItems">
     {{item.short_name}},{{item.name}},{{item.description}}
     <button class="btn btn-danger" ng-click="list.onRemove({index: $index})">Don't want this one!</button>
