--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,7 +18,9 @@
     </div>
 
     <!-- found-items should be implemented as a component -->
+    <div>
     <found-items found-items="vm.found" on-remove="vm.removeItem(index)" ></found-items>
+    </div>
   </div>
   <script src="js/angular.min.js"></script>
   <script src="script/app.js"></script>
