--- a/module3-solution/index.html
+++ b/module3-solution/index.html
@@ -18,7 +18,7 @@
     </div>
 
     <!-- found-items should be implemented as a component -->
-    <div>
+    <div class="grid">
     <found-items found-items="vm.found" on-remove="vm.removeItem(index)" ></found-items>
     </div>
   </div>
