--- a/module3-solution/item.html
+++ b/module3-solution/item.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="row">
 <span ng-if="list.foundItems.length === 0">Nothing found!</span>
 <ul ng-if="list.foundItems.length > 0">
   <li ng-repeat="item in list.foundItems">
