--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -16,6 +16,8 @@
   <script src="script/menudata.service.js"></script>
   <script src="script/categories.component.js"></script>
   <script src="script/items.component.js"></script>
+  <script src="script/categories.controller.js"></script>
+  <script src="script/items.controller.js"></script>
   <script src="script/routes.js"></script>
 </body>
 </html>
