--- a/module4-solution/categories.html
+++ b/module4-solution/categories.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Categories List</h1>
 
-    <categories data="ctrl.categories"></categories>
+    <categories data="catCtrl.categories"></categories>
 
 </div>
