--- a/module4-solution/items.html
+++ b/module4-solution/items.html
@@ -1,6 +1,6 @@
 <div class="container">
     <h1>Items List</h1>
 
-    <items data="ctrl.data"></items>
+    <items data="itemsCtrl.data"></items>
 
 </div>
