--- a/module4-solution/index.html
+++ b/module4-solution/index.html
@@ -7,17 +7,26 @@
     <link rel="stylesheet" href="styles/styles.css">
   </head>
 <body ng-app="MenuApp">
-   <ui-view></ui-view>
+  <div class="container">
 
+   <h1>Welcome to Shanghai Restaurant</h1>
+   <ui-view></ui-view>
+ </div>
+   <!-- Libraries -->
   <script src="js/angular.min.js"></script>
   <script src="js/angular-ui-router.min.js"></script>
+  <!-- Modules -->
   <script src="script/data.module.js"></script>
   <script src="script/menuapp.module.js"></script>
+  <!-- Services -->
   <script src="script/menudata.service.js"></script>
+  <!-- Components -->
   <script src="script/categories.component.js"></script>
   <script src="script/items.component.js"></script>
+  <!-- Controllers -->
   <script src="script/categories.controller.js"></script>
   <script src="script/items.controller.js"></script>
+  <!-- Routes -->
   <script src="script/routes.js"></script>
 </body>
 </html>
